# hillis-steele-opencl

./: CMakeLists.txt  README.md
include/: config.h  util.h
src/: main.cpp  scan.cl
test/: CMakeLists.txt
test/resources/test1/: input.txt  output.txt
test/resources/test2/: output.txt
test/resources/test3/: input.txt
